# eigenvector-aggregate-buckling

./: .gitignore  CMakeLists.txt  README.md  beam.py  demo.py  domain.py  jobs.sbatch  kernel.py  pareto.py  plot_E.py  plot_displacement.py  plot_mbbbeam.py  plot_square.py  pybind11.cmake  run.sh  settings.py  seyranian_lund_olhoff.py  simple_example.py  sweep_kf.sh  sweep_m0.sh  test.py  test3.py  test4.py  test_lobpcg.py  topo_opt.py  topo_plot.py  tube.py  tube_opt.py  utils.py
other/: building.txt  building.xlsx  building2.txt  building3.txt  demo2.py  jobs.sbatch  plot_E.py  plot_beam.py  plot_beam2.py  plot_building.py  plot_kappa.py  plot_square.py  simple_example.py  test.py  test2.py  test4.py  test5.py  utils.py
other/abaqus/beam/: loadpath.py
other/abaqus/buliding/: absqus.py  loadpath.py
other/abaqus/square/: loadpath.py
src/: G.h  K.h  buckling.h  converter.h  eij.cpp  kernel.cpp  kokkos.cpp  lapackage.hpp  lobpcg.hpp  other.cpp  other.h  stiffness.cpp  stiffness.h  stress_stiffness.h  toolkit.h  utils.hpp  warpper.cpp  wrapper.h
